fix scrollbar

--- a/src/zip-manager/components/styles/InfoBar.css
+++ b/src/zip-manager/components/styles/InfoBar.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: var(--gap-width);
+  padding-block: var(--gap-width);
+  margin-inline: var(--gap-width);
   width: 100%;
   overflow: hidden;
 }
